// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AddNewTask Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-furwcr caCiDU"
  >
    <div
      className="sc-bdvvtL dnQVSH"
    >
      <h1
        className="sc-gsDKAQ caCqSY"
      >
        ADD NEW TASK
      </h1>
      <hr />
    </div>
    <div>
      <label
        className="sc-dkPtRN jPiVTR"
      >
        TASK TITLE
      </label>
      <input
        className="sc-hKwDye eRQbyJ"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="sc-dkPtRN jPiVTR"
      >
        ESTIMATED TOMATO
      </label>
      <div
        className="sc-jRQBWg tBfgG"
        onClick={[Function]}
      >
        <button
          className="sc-eCImPb dSKkuN"
          data-number={1}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={2}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={3}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={4}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={5}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={6}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={7}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={8}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={9}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={10}
        />
      </div>
    </div>
    <div
      className="sc-iCfMLu hBHBzP"
    >
      <button
        className="sc-gKclnd bkAsgH"
        data-large={true}
        onClick={[Function]}
      >
        ADD TASK
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots AudioButton Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-jrQzAO uzMga"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots AudioButton Playing 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-jrQzAO uzMga"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="sc-gKclnd bkAsgH"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-gKclnd bkAsgH"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary Outline 1`] = `
<button
  className="sc-gKclnd cwuVOQ"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-gKclnd fJoDqP"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary Outline 1`] = `
<button
  className="sc-gKclnd csmXBo"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots CompleteButton Default 1`] = `
<button
  className="sc-kDTinF XBrWv"
  onClick={[Function]}
>
  TASK COMPLETED
</button>
`;

exports[`Storyshots CountPanel Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-bqiRlB jvHBxD"
  >
    <div
      className="sc-iqseJM llGfYR"
    >
      <p
        className="sc-crHmcD cWdAff"
      >
        0
      </p>
      <p
        className="sc-egiyK bTAGDt"
      >
        TODAY
      </p>
    </div>
    <div
      className="sc-iqseJM llGfYR"
    >
      <p
        className="sc-crHmcD cWdAff"
      >
        0
      </p>
      <p
        className="sc-egiyK bTAGDt"
      >
        2/13 - 2/19
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots CountPanelItem Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-iqseJM llGfYR"
  >
    <p
      className="sc-crHmcD cWdAff"
    >
      0
    </p>
    <p
      className="sc-egiyK bTAGDt"
    >
      TODAY
    </p>
  </div>
</div>
`;

exports[`Storyshots DateCountItem Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
>
  <div
    className="sc-bkkeKt hCLhDe"
  >
    <div
      className="sc-hBUSln Qtshu"
    >
      <p
        className="sc-fotOHu eunKOG"
      >
        5
      </p>
      <div
        className="sc-ksdxgE hTITcm"
      />
      <div
        className="sc-ksdxgE hTITcm"
      />
      <div
        className="sc-ksdxgE hTITcm"
      />
      <div
        className="sc-ksdxgE hTITcm"
      />
      <div
        className="sc-ksdxgE hTITcm"
      />
    </div>
    <div
      className="sc-fFeiMQ"
    >
      <p
        className="sc-egiyK bTAGDt"
      >
        2/15
      </p>
      <p
        className="sc-egiyK bTAGDt"
      >
        TUE
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountItem No Tomato 1`] = `
<div
  className="sc-pVTFL dZVpLl"
>
  <div
    className="sc-bkkeKt hCLhDe"
  >
    <div
      className="sc-hBUSln Qtshu"
    />
    <div
      className="sc-fFeiMQ"
    >
      <p
        className="sc-egiyK bTAGDt"
      >
        2/15
      </p>
      <p
        className="sc-egiyK bTAGDt"
      >
        TUE
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountPanel Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-ieecCq eLKGYs"
  >
    <div
      className="sc-bkkeKt hCLhDe"
    >
      <div
        className="sc-hBUSln Qtshu"
      />
      <div
        className="sc-fFeiMQ"
      >
        <p
          className="sc-egiyK bTAGDt"
        >
          2/13
        </p>
        <p
          className="sc-egiyK bTAGDt"
        >
          SUN
        </p>
      </div>
    </div>
    <div
      className="sc-bkkeKt hCLhDe"
    >
      <div
        className="sc-hBUSln Qtshu"
      >
        <p
          className="sc-fotOHu eunKOG"
        >
          1
        </p>
        <div
          className="sc-ksdxgE hTITcm"
        />
      </div>
      <div
        className="sc-fFeiMQ"
      >
        <p
          className="sc-egiyK bTAGDt"
        >
          2/14
        </p>
        <p
          className="sc-egiyK bTAGDt"
        >
          MON
        </p>
      </div>
    </div>
    <div
      className="sc-bkkeKt hCLhDe"
    >
      <div
        className="sc-hBUSln Qtshu"
      >
        <p
          className="sc-fotOHu eunKOG"
        >
          2
        </p>
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
      </div>
      <div
        className="sc-fFeiMQ"
      >
        <p
          className="sc-egiyK bTAGDt"
        >
          2/15
        </p>
        <p
          className="sc-egiyK bTAGDt"
        >
          TUE
        </p>
      </div>
    </div>
    <div
      className="sc-bkkeKt hCLhDe"
    >
      <div
        className="sc-hBUSln Qtshu"
      >
        <p
          className="sc-fotOHu eunKOG"
        >
          3
        </p>
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
      </div>
      <div
        className="sc-fFeiMQ"
      >
        <p
          className="sc-egiyK bTAGDt"
        >
          2/16
        </p>
        <p
          className="sc-egiyK bTAGDt"
        >
          WED
        </p>
      </div>
    </div>
    <div
      className="sc-bkkeKt hCLhDe"
    >
      <div
        className="sc-hBUSln Qtshu"
      >
        <p
          className="sc-fotOHu eunKOG"
        >
          4
        </p>
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
      </div>
      <div
        className="sc-fFeiMQ"
      >
        <p
          className="sc-egiyK bTAGDt"
        >
          2/17
        </p>
        <p
          className="sc-egiyK bTAGDt"
        >
          THU
        </p>
      </div>
    </div>
    <div
      className="sc-bkkeKt hCLhDe"
    >
      <div
        className="sc-hBUSln Qtshu"
      >
        <p
          className="sc-fotOHu eunKOG"
        >
          5
        </p>
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
      </div>
      <div
        className="sc-fFeiMQ"
      >
        <p
          className="sc-egiyK bTAGDt"
        >
          2/18
        </p>
        <p
          className="sc-egiyK bTAGDt"
        >
          FRI
        </p>
      </div>
    </div>
    <div
      className="sc-bkkeKt hCLhDe"
    >
      <div
        className="sc-hBUSln Qtshu"
      >
        <p
          className="sc-fotOHu eunKOG"
        >
          6
        </p>
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
        <div
          className="sc-ksdxgE hTITcm"
        />
      </div>
      <div
        className="sc-fFeiMQ"
      >
        <p
          className="sc-egiyK bTAGDt"
        >
          2/19
        </p>
        <p
          className="sc-egiyK bTAGDt"
        >
          SAT
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DoneModal Break 1`] = `
<div
  className="sc-dlVxhl gHMPTt"
>
  <div
    className="sc-dJjYzT bXinuT"
    onClick={[Function]}
  />
  <div
    className="sc-hGPBjI lozzcN"
  >
    <div
      className="sc-bBHxTw cgWLrm"
    >
      <p
        className="sc-kfPuZi kvGgHU"
      >
        Break time is over
      </p>
      <p>
        Would you like to start the next task?
      </p>
      <div
        className="sc-iCfMLu hBHBzP"
      >
        <button
          className="sc-gKclnd bkAsgH"
          data-large={true}
          onClick={[Function]}
        >
          START
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DoneModal Task 1`] = `
<div
  className="sc-dlVxhl gHMPTt"
>
  <div
    className="sc-dJjYzT bXinuT"
    onClick={[Function]}
  />
  <div
    className="sc-hGPBjI lozzcN"
  >
    <div
      className="sc-bBHxTw cgWLrm"
    >
      <p
        className="sc-kfPuZi kvGgHU"
      >
        Task Done
      </p>
      <p>
        You have done the task!
      </p>
      <div
        className="sc-iCfMLu hBHBzP"
      >
        <button
          className="sc-gKclnd bkAsgH"
          data-large={true}
          onClick={[Function]}
        >
          TAKE A BREAK
        </button>
        <button
          className="sc-gKclnd fJoDqP"
          data-large={true}
          onClick={[Function]}
        >
          KEEP GOING
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Default 1`] = `
<label
  className="sc-dkPtRN jPiVTR"
>
  TEST
</label>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="sc-dlVxhl gHMPTt"
>
  <div
    className="sc-dJjYzT bXinuT"
    onClick={[Function]}
  />
  <div
    className="sc-hGPBjI lozzcN"
  >
    <p
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      My Modal
    </p>
  </div>
</div>
`;

exports[`Storyshots OperateSection/AddNewTask Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-furwcr caCiDU"
  >
    <div
      className="sc-bdvvtL dnQVSH"
    >
      <h1
        className="sc-gsDKAQ caCqSY"
      >
        ADD NEW TASK
      </h1>
      <hr />
    </div>
    <div>
      <label
        className="sc-dkPtRN jPiVTR"
      >
        TASK TITLE
      </label>
      <input
        className="sc-hKwDye eRQbyJ"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="sc-dkPtRN jPiVTR"
      >
        ESTIMATED TOMATO
      </label>
      <div
        className="sc-jRQBWg tBfgG"
        onClick={[Function]}
      >
        <button
          className="sc-eCImPb dSKkuN"
          data-number={1}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={2}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={3}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={4}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={5}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={6}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={7}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={8}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={9}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={10}
        />
      </div>
    </div>
    <div
      className="sc-iCfMLu hBHBzP"
    >
      <button
        className="sc-gKclnd bkAsgH"
        data-large={true}
        onClick={[Function]}
      >
        ADD TASK
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots OperateSection/TaskList Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-furwcr caCiDU"
  >
    <div
      className="sc-bdvvtL dnQVSH"
    >
      <h1
        className="sc-gsDKAQ caCqSY"
      >
        TASK LIST
      </h1>
      <hr />
    </div>
    <div
      className="sc-ezbkAF lhAeSE"
    >
      <div
        className="sc-llYSUQ eiibXJ"
      >
        <button
          className="sc-cxpSdN kLkqyl"
          onClick={[Function]}
        >
          TODO
        </button>
        <button
          className="sc-cxpSdN iWlxva"
          onClick={[Function]}
        >
          DONE
        </button>
      </div>
      <ul
        className="sc-giYglK icIWMx"
      >
        <li
          className="sc-iJKOTD hqrEXk"
        >
          <div
            className="sc-iAKWXU krUsll"
          >
            <div
              className="sc-ikJyIC dNOZuk"
            >
              <div
                className="sc-jJoQJp lfSWHh"
              >
                <div>
                  <p
                    className="sc-hiCibw dfEUYn"
                  >
                    todo1
                  </p>
                  <div
                    className="sc-kLwhqv jakpon"
                  >
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                  </div>
                </div>
              </div>
              <div
                className="sc-gWXbKe hBIlYO"
              >
                <button
                  className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
                  onClick={[Function]}
                >
                  ...
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-iJKOTD hqrEXk"
        >
          <div
            className="sc-iAKWXU krUsll"
          >
            <div
              className="sc-ikJyIC dNOZuk"
            >
              <div
                className="sc-jJoQJp lfSWHh"
              >
                <div>
                  <p
                    className="sc-hiCibw dfEUYn"
                  >
                    todo2
                  </p>
                  <div
                    className="sc-kLwhqv jakpon"
                  >
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                  </div>
                </div>
              </div>
              <div
                className="sc-gWXbKe hBIlYO"
              >
                <button
                  className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
                  onClick={[Function]}
                >
                  ...
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots PageButton Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-iwjdpV jZNRRi"
  />
</div>
`;

exports[`Storyshots Panel Ringtone 1`] = `
<div
  className="sc-ezbkAF lhAeSE"
>
  <div
    className="sc-llYSUQ eiibXJ"
  >
    <button
      className="sc-cxpSdN kLkqyl"
      onClick={[Function]}
    >
      WORK
    </button>
    <button
      className="sc-cxpSdN iWlxva"
      onClick={[Function]}
    >
      BREAK
    </button>
  </div>
  <ul
    className="sc-giYglK icIWMx"
  >
    <li
      className="sc-iJKOTD hqrEXk"
    >
      <div
        className="sc-ikJyIC dNOZuk"
      >
        <div
          className="sc-jJoQJp lfSWHh"
          onClick={[Function]}
        >
          <div
            className="sc-cCcXHH OCwjY"
          >
            <div
              className="sc-bYoBSM ena-Ddx"
            />
          </div>
          <p
            className="sc-hiCibw dfEUYn"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test1
          </p>
        </div>
        <div
          className="sc-gWXbKe hBIlYO"
        >
          <button
            className="sc-jrQzAO uzMga"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-iJKOTD hqrEXk"
    >
      <div
        className="sc-ikJyIC dNOZuk"
      >
        <div
          className="sc-jJoQJp lfSWHh"
          onClick={[Function]}
        >
          <div
            className="sc-cCcXHH OCwjY"
          >
            <div
              className="sc-bYoBSM ena-Ddx"
            />
          </div>
          <p
            className="sc-hiCibw dfEUYn"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test2
          </p>
        </div>
        <div
          className="sc-gWXbKe hBIlYO"
        >
          <button
            className="sc-jrQzAO uzMga"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-iJKOTD hqrEXk"
    >
      <div
        className="sc-ikJyIC dNOZuk"
      >
        <div
          className="sc-jJoQJp lfSWHh"
          onClick={[Function]}
        >
          <div
            className="sc-cCcXHH OCwjY"
          >
            <div
              className="sc-bYoBSM ena-Ddx"
            />
          </div>
          <p
            className="sc-hiCibw dfEUYn"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test3
          </p>
        </div>
        <div
          className="sc-gWXbKe hBIlYO"
        >
          <button
            className="sc-jrQzAO uzMga"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
          />
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Panel Task 1`] = `
<div
  className="sc-ezbkAF lhAeSE"
>
  <div
    className="sc-llYSUQ eiibXJ"
  >
    <button
      className="sc-cxpSdN kLkqyl"
      onClick={[Function]}
    >
      TO DO
    </button>
    <button
      className="sc-cxpSdN iWlxva"
      onClick={[Function]}
    >
      DONE
    </button>
  </div>
  <ul
    className="sc-giYglK icIWMx"
  >
    <li
      className="sc-iJKOTD hqrEXk"
    >
      <div
        className="sc-iAKWXU krUsll"
      >
        <div
          className="sc-ikJyIC dNOZuk"
        >
          <div
            className="sc-jJoQJp lfSWHh"
          >
            <div>
              <p
                className="sc-hiCibw dfEUYn"
              >
                todo 1
              </p>
              <div
                className="sc-kLwhqv jakpon"
              >
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-gWXbKe hBIlYO"
          >
            <button
              className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-iJKOTD hqrEXk"
    >
      <div
        className="sc-iAKWXU krUsll"
      >
        <div
          className="sc-ikJyIC dNOZuk"
        >
          <div
            className="sc-jJoQJp lfSWHh"
          >
            <div>
              <p
                className="sc-hiCibw dfEUYn"
              >
                todo 2
              </p>
              <div
                className="sc-kLwhqv jakpon"
              >
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-gWXbKe hBIlYO"
          >
            <button
              className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-iJKOTD hqrEXk"
    >
      <div
        className="sc-iAKWXU krUsll"
      >
        <div
          className="sc-ikJyIC dNOZuk"
        >
          <div
            className="sc-jJoQJp lfSWHh"
          >
            <div>
              <p
                className="sc-hiCibw dfEUYn"
              >
                todo 3
              </p>
              <div
                className="sc-kLwhqv jakpon"
              >
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
                <div
                  className="sc-bYoBSM ena-Ddx"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-gWXbKe hBIlYO"
          >
            <button
              className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Panel With Empty List 1`] = `
<div
  className="sc-ezbkAF lhAeSE"
>
  <div
    className="sc-llYSUQ eiibXJ"
  >
    <button
      className="sc-cxpSdN kLkqyl"
      onClick={[Function]}
    >
      TO DO
    </button>
    <button
      className="sc-cxpSdN iWlxva"
      onClick={[Function]}
    >
      DONE
    </button>
  </div>
  <ul
    className="sc-giYglK icIWMx"
  >
    <li
      className="sc-iJKOTD cXASXE"
    >
      You don't have any task now,
      <br />
      please add task first!
    </li>
  </ul>
</div>
`;

exports[`Storyshots PanelItem Default 1`] = `
<li
  className="sc-iJKOTD hqrEXk"
>
  <h3>
    Hello World
  </h3>
</li>
`;

exports[`Storyshots PanelList Default 1`] = `
<ul
  className="sc-giYglK icIWMx"
>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    1
  </li>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    2
  </li>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    3
  </li>
</ul>
`;

exports[`Storyshots Pie Children 1`] = `
<div
  className="sc-efQSVx bzSUuw"
  color="#ea5548"
>
  <div
    className="sc-cTAqQK gUrodb"
    color="#ea5548"
  />
  <div
    className="sc-jObWnj iqANhN"
  >
    <p
      style={
        Object {
          "margin": "0",
        }
      }
    >
      children
    </p>
  </div>
</div>
`;

exports[`Storyshots Pie Default 1`] = `
<div
  className="sc-efQSVx bzSUuw"
  color="#ea5548"
>
  <div
    className="sc-cTAqQK frZLDz"
    color="#ea5548"
  />
  <div
    className="sc-jObWnj iqANhN"
  />
</div>
`;

exports[`Storyshots PlayButton Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-dPiLbb epXfqL"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Record Completed 1`] = `
<div
  className="sc-bYoBSM crODaE"
/>
`;

exports[`Storyshots Record Default 1`] = `
<div
  className="sc-bYoBSM ena-Ddx"
/>
`;

exports[`Storyshots RecordGroup Default 1`] = `
<div
  className="sc-kLwhqv jakpon"
>
  <div
    className="sc-bYoBSM ena-Ddx"
  />
  <div
    className="sc-bYoBSM ena-Ddx"
  />
  <div
    className="sc-bYoBSM ena-Ddx"
  />
  <div
    className="sc-bYoBSM ena-Ddx"
  />
  <div
    className="sc-bYoBSM ena-Ddx"
  />
</div>
`;

exports[`Storyshots RingtoneItem Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
>
  <div
    className="sc-ikJyIC dNOZuk"
  >
    <div
      className="sc-jJoQJp lfSWHh"
      onClick={[Function]}
    >
      <div
        className="sc-cCcXHH OCwjY"
      >
        <div
          className="sc-bYoBSM ena-Ddx"
        />
      </div>
      <p
        className="sc-hiCibw dfEUYn"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        test
      </p>
    </div>
    <div
      className="sc-gWXbKe hBIlYO"
    >
      <button
        className="sc-jrQzAO uzMga"
        onClick={[Function]}
      />
      <audio
        autoPlay={false}
        src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots RingtonePanelList Default 1`] = `
<ul
  className="sc-giYglK icIWMx"
>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    <div
      className="sc-ikJyIC dNOZuk"
    >
      <div
        className="sc-jJoQJp lfSWHh"
        onClick={[Function]}
      >
        <div
          className="sc-cCcXHH OCwjY"
        >
          <div
            className="sc-bYoBSM ena-Ddx"
          />
        </div>
        <p
          className="sc-hiCibw dfEUYn"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test1
        </p>
      </div>
      <div
        className="sc-gWXbKe hBIlYO"
      >
        <button
          className="sc-jrQzAO uzMga"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    <div
      className="sc-ikJyIC dNOZuk"
    >
      <div
        className="sc-jJoQJp lfSWHh"
        onClick={[Function]}
      >
        <div
          className="sc-cCcXHH OCwjY"
        >
          <div
            className="sc-bYoBSM ena-Ddx"
          />
        </div>
        <p
          className="sc-hiCibw dfEUYn"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test2
        </p>
      </div>
      <div
        className="sc-gWXbKe hBIlYO"
      >
        <button
          className="sc-jrQzAO uzMga"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    <div
      className="sc-ikJyIC dNOZuk"
    >
      <div
        className="sc-jJoQJp lfSWHh"
        onClick={[Function]}
      >
        <div
          className="sc-cCcXHH OCwjY"
        >
          <div
            className="sc-bYoBSM ena-Ddx"
          />
        </div>
        <p
          className="sc-hiCibw dfEUYn"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test3
        </p>
      </div>
      <div
        className="sc-gWXbKe hBIlYO"
      >
        <button
          className="sc-jrQzAO uzMga"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots SectionEmpty Default 1`] = `
<div
  className="sc-AjmGg eATeza"
>
  <div
    className="sc-bBHHxi jtVPnk"
  >
    POMODORO
  </div>
  <p
    className="sc-cNKqjZ kFzHSA"
  >
    You don't have any task now,
    <br />
    please add task first!
  </p>
</div>
`;

exports[`Storyshots Tab Active 1`] = `
<button
  className="sc-cxpSdN kLkqyl"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots Tab Default 1`] = `
<button
  className="sc-cxpSdN iWlxva"
  onClick={[Function]}
>
  
</button>
`;

exports[`Storyshots Tab Wording 1`] = `
<button
  className="sc-cxpSdN iWlxva"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots TaskItem Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-iAKWXU krUsll"
  >
    <div
      className="sc-ikJyIC dNOZuk"
    >
      <div
        className="sc-jJoQJp lfSWHh"
      >
        <div>
          <p
            className="sc-hiCibw dfEUYn"
          >
            test
          </p>
          <div
            className="sc-kLwhqv jakpon"
          >
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-gWXbKe hBIlYO"
      >
        <button
          className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Done 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-iAKWXU krUsll"
  >
    <div
      className="sc-ikJyIC dNOZuk"
    >
      <div
        className="sc-jJoQJp lfSWHh"
      >
        <div
          className="sc-cCcXHH OCwjY"
        >
          <img
            alt=""
            src="complete.svg"
          />
        </div>
        <div>
          <p
            className="sc-hiCibw dfEUYn"
          >
            test
          </p>
          <div
            className="sc-kLwhqv jakpon"
          >
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-gWXbKe hBIlYO"
      >
        <button
          className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Opened 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-iAKWXU krUsll"
  >
    <div
      className="sc-ikJyIC dNOZuk"
    >
      <div
        className="sc-jJoQJp lfSWHh"
      >
        <div>
          <p
            className="sc-hiCibw dfEUYn"
          >
            test
          </p>
          <div
            className="sc-kLwhqv jakpon"
          >
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
            <div
              className="sc-bYoBSM ena-Ddx"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-gWXbKe hBIlYO"
      >
        <button
          className="sc-cidDSM sc-caiLqq iOsXAI dLMPgc"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
    <hr />
    <div
      className="sc-iUKqMP lirtPR"
    >
      <div>
        <label
          className="sc-dkPtRN jPiVTR"
        >
          TASK TITLE
        </label>
        <input
          className="sc-hKwDye eRQbyJ"
          onChange={[Function]}
          type="text"
          value="test"
        />
      </div>
      <div>
        <label
          className="sc-dkPtRN jPiVTR"
        >
          ESTIMATED TOMATO
        </label>
        <div
          className="sc-jRQBWg tBfgG"
          onClick={[Function]}
        >
          <button
            className="sc-eCImPb gntwmx"
            data-number={1}
          />
          <button
            className="sc-eCImPb gntwmx"
            data-number={2}
          />
          <button
            className="sc-eCImPb gntwmx"
            data-number={3}
          />
          <button
            className="sc-eCImPb gntwmx"
            data-number={4}
          />
          <button
            className="sc-eCImPb gntwmx"
            data-number={5}
          />
          <button
            className="sc-eCImPb dSKkuN"
            data-number={6}
          />
          <button
            className="sc-eCImPb dSKkuN"
            data-number={7}
          />
          <button
            className="sc-eCImPb dSKkuN"
            data-number={8}
          />
          <button
            className="sc-eCImPb dSKkuN"
            data-number={9}
          />
          <button
            className="sc-eCImPb dSKkuN"
            data-number={10}
          />
        </div>
      </div>
      <div
        className="sc-iCfMLu hBHBzP"
      >
        <button
          className="sc-gKclnd fJoDqP"
          data-large={false}
          onClick={[Function]}
        >
          DELETE
        </button>
        <button
          className="sc-gKclnd bkAsgH"
          data-large={true}
          onClick={[Function]}
        >
          SAVE
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/DoneTask Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-iUKqMP lirtPR"
  >
    <div
      className="sc-iCfMLu hBHBzP"
    >
      <button
        className="sc-gKclnd fJoDqP"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-gKclnd bkAsgH"
        data-large={true}
        onClick={[Function]}
      >
        REDO
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/TodoTask Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-iUKqMP lirtPR"
  >
    <div>
      <label
        className="sc-dkPtRN jPiVTR"
      >
        TASK TITLE
      </label>
      <input
        className="sc-hKwDye eRQbyJ"
        onChange={[Function]}
        type="text"
        value="test"
      />
    </div>
    <div>
      <label
        className="sc-dkPtRN jPiVTR"
      >
        ESTIMATED TOMATO
      </label>
      <div
        className="sc-jRQBWg tBfgG"
        onClick={[Function]}
      >
        <button
          className="sc-eCImPb dSKkuN"
          data-number={1}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={2}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={3}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={4}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={5}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={6}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={7}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={8}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={9}
        />
        <button
          className="sc-eCImPb dSKkuN"
          data-number={10}
        />
      </div>
    </div>
    <div
      className="sc-iCfMLu hBHBzP"
    >
      <button
        className="sc-gKclnd fJoDqP"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-gKclnd bkAsgH"
        data-large={true}
        onClick={[Function]}
      >
        SAVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
>
  <div
    className="sc-ikJyIC dNOZuk"
  >
    <div
      className="sc-jJoQJp lfSWHh"
    >
      <div>
        <p
          className="sc-hiCibw dfEUYn"
        >
          test
        </p>
        <div
          className="sc-kLwhqv jakpon"
        >
          <div
            className="sc-bYoBSM ena-Ddx"
          />
          <div
            className="sc-bYoBSM ena-Ddx"
          />
          <div
            className="sc-bYoBSM ena-Ddx"
          />
          <div
            className="sc-bYoBSM ena-Ddx"
          />
          <div
            className="sc-bYoBSM ena-Ddx"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-gWXbKe hBIlYO"
    >
      <button
        className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Done 1`] = `
<div
  className="sc-pVTFL dZVpLl"
>
  <div
    className="sc-ikJyIC dNOZuk"
  >
    <div
      className="sc-jJoQJp lfSWHh"
    >
      <div
        className="sc-cCcXHH OCwjY"
      >
        <img
          alt=""
          src="complete.svg"
        />
      </div>
      <div>
        <p
          className="sc-hiCibw dfEUYn"
        >
          test
        </p>
        <div
          className="sc-kLwhqv jakpon"
        >
          <div
            className="sc-bYoBSM ena-Ddx"
          />
          <div
            className="sc-bYoBSM ena-Ddx"
          />
          <div
            className="sc-bYoBSM ena-Ddx"
          />
          <div
            className="sc-bYoBSM ena-Ddx"
          />
          <div
            className="sc-bYoBSM ena-Ddx"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-gWXbKe hBIlYO"
    >
      <button
        className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-furwcr caCiDU"
  >
    <div
      className="sc-bdvvtL dnQVSH"
    >
      <h1
        className="sc-gsDKAQ caCqSY"
      >
        TASK LIST
      </h1>
      <hr />
    </div>
    <div
      className="sc-ezbkAF lhAeSE"
    >
      <div
        className="sc-llYSUQ eiibXJ"
      >
        <button
          className="sc-cxpSdN kLkqyl"
          onClick={[Function]}
        >
          TODO
        </button>
        <button
          className="sc-cxpSdN iWlxva"
          onClick={[Function]}
        >
          DONE
        </button>
      </div>
      <ul
        className="sc-giYglK icIWMx"
      >
        <li
          className="sc-iJKOTD hqrEXk"
        >
          <div
            className="sc-iAKWXU krUsll"
          >
            <div
              className="sc-ikJyIC dNOZuk"
            >
              <div
                className="sc-jJoQJp lfSWHh"
              >
                <div>
                  <p
                    className="sc-hiCibw dfEUYn"
                  >
                    todo1
                  </p>
                  <div
                    className="sc-kLwhqv jakpon"
                  >
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                  </div>
                </div>
              </div>
              <div
                className="sc-gWXbKe hBIlYO"
              >
                <button
                  className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
                  onClick={[Function]}
                >
                  ...
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-iJKOTD hqrEXk"
        >
          <div
            className="sc-iAKWXU krUsll"
          >
            <div
              className="sc-ikJyIC dNOZuk"
            >
              <div
                className="sc-jJoQJp lfSWHh"
              >
                <div>
                  <p
                    className="sc-hiCibw dfEUYn"
                  >
                    todo2
                  </p>
                  <div
                    className="sc-kLwhqv jakpon"
                  >
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                    <div
                      className="sc-bYoBSM ena-Ddx"
                    />
                  </div>
                </div>
              </div>
              <div
                className="sc-gWXbKe hBIlYO"
              >
                <button
                  className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
                  onClick={[Function]}
                >
                  ...
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskPanelList Default 1`] = `
<ul
  className="sc-giYglK icIWMx"
>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    <div
      className="sc-iAKWXU krUsll"
    >
      <div
        className="sc-ikJyIC dNOZuk"
      >
        <div
          className="sc-jJoQJp lfSWHh"
        >
          <div>
            <p
              className="sc-hiCibw dfEUYn"
            >
              test1
            </p>
            <div
              className="sc-kLwhqv jakpon"
            >
              <div
                className="sc-bYoBSM crODaE"
              />
              <div
                className="sc-bYoBSM crODaE"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-gWXbKe hBIlYO"
        >
          <button
            className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    <div
      className="sc-iAKWXU krUsll"
    >
      <div
        className="sc-ikJyIC dNOZuk"
      >
        <div
          className="sc-jJoQJp lfSWHh"
        >
          <div>
            <p
              className="sc-hiCibw dfEUYn"
            >
              test2
            </p>
            <div
              className="sc-kLwhqv jakpon"
            >
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-gWXbKe hBIlYO"
        >
          <button
            className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-iJKOTD hqrEXk"
  >
    <div
      className="sc-iAKWXU krUsll"
    >
      <div
        className="sc-ikJyIC dNOZuk"
      >
        <div
          className="sc-jJoQJp lfSWHh"
        >
          <div>
            <p
              className="sc-hiCibw dfEUYn"
            >
              test3
            </p>
            <div
              className="sc-kLwhqv jakpon"
            >
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
              <div
                className="sc-bYoBSM ena-Ddx"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-gWXbKe hBIlYO"
        >
          <button
            className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots TaskPanelList Empty 1`] = `
<ul
  className="sc-giYglK icIWMx"
>
  <li
    className="sc-iJKOTD cXASXE"
  >
    You don't have any task now,
    <br />
    please add task first!
  </li>
</ul>
`;

exports[`Storyshots TaskTimer Break 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div
    className="sc-iNGGcK kCTuKH"
  >
    <div
      className="sc-jgrJph dZbPzU"
    >
      <p
        data-title={true}
      >
        test
      </p>
      <p
        className="sc-lbhJGD byXhHI"
      >
        break
      </p>
    </div>
    <div
      className="sc-efQSVx rTQyp"
      color="#b5e254"
    >
      <div
        className="sc-cTAqQK frZLDz"
        color="#b5e254"
      />
      <div
        className="sc-jObWnj iqANhN"
      >
        <div
          className="sc-hUpaCq iQwGjh"
        >
          <div
            className="sc-khQegj"
          >
            00:10
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-gSQFLo emRrbX"
    >
      <button
        className="sc-dPiLbb epXfqL"
        onClick={[Function]}
      />
      <button
        className="sc-dPiLbb cekISx"
        onClick={[Function]}
      />
      <button
        className="sc-dPiLbb gOwvua"
        onClick={[Function]}
      />
    </div>
    <button
      className="sc-kDTinF XBrWv"
      onClick={[Function]}
    >
      TASK COMPLETED
    </button>
  </div>
</div>
`;

exports[`Storyshots TaskTimer Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div
    className="sc-iNGGcK kCTuKH"
  >
    <div
      className="sc-jgrJph dZbPzU"
    >
      <p
        data-title={true}
      >
        test
      </p>
      <div
        className="sc-kLwhqv jakpon"
      >
        <div
          className="sc-bYoBSM crODaE"
        />
        <div
          className="sc-bYoBSM crODaE"
        />
        <div
          className="sc-bYoBSM ena-Ddx"
        />
        <div
          className="sc-bYoBSM ena-Ddx"
        />
        <div
          className="sc-bYoBSM ena-Ddx"
        />
      </div>
    </div>
    <div
      className="sc-efQSVx bzSUuw"
      color="#ea5548"
    >
      <div
        className="sc-cTAqQK bnbyou"
        color="#ea5548"
      />
      <div
        className="sc-jObWnj iqANhN"
      >
        <div
          className="sc-hUpaCq iQwGjh"
        >
          <div
            className="sc-khQegj"
          >
            00:30
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-gSQFLo emRrbX"
    >
      <button
        className="sc-dPiLbb epXfqL"
        onClick={[Function]}
      />
      <button
        className="sc-dPiLbb cekISx"
        onClick={[Function]}
      />
      <button
        className="sc-dPiLbb gOwvua"
        onClick={[Function]}
      />
    </div>
    <button
      className="sc-kDTinF XBrWv"
      onClick={[Function]}
    >
      TASK COMPLETED
    </button>
  </div>
</div>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-hKwDye eRQbyJ"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput Password 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-hKwDye eRQbyJ"
    onChange={[Function]}
    type="password"
    value=""
  />
</div>
`;

exports[`Storyshots Timer Default 1`] = `
<div
  className="sc-khQegj"
>
  00:00
</div>
`;

exports[`Storyshots TimerPie Default 1`] = `
<div
  className="sc-efQSVx bzSUuw"
  color="#ea5548"
>
  <div
    className="sc-cTAqQK jcBJyR"
    color="#ea5548"
  />
  <div
    className="sc-jObWnj iqANhN"
  >
    <div
      className="sc-hUpaCq iQwGjh"
    >
      <div
        className="sc-khQegj"
      >
        00:50
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimerSection Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div>
    <div
      className="sc-AjmGg eATeza"
    >
      <div
        className="sc-bBHHxi jtVPnk"
      >
        POMODORO
      </div>
      <p
        className="sc-cNKqjZ kFzHSA"
      >
        You don't have any task now,
        <br />
        please add task first!
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimerSection Task 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div>
    <div
      className="sc-iNGGcK kCTuKH"
    >
      <div
        className="sc-jgrJph dZbPzU"
      >
        <p
          data-title={true}
        >
          Test
        </p>
        <div
          className="sc-kLwhqv jakpon"
        >
          <div
            className="sc-bYoBSM ena-Ddx"
          />
        </div>
      </div>
      <div
        className="sc-efQSVx bzSUuw"
        color="#ea5548"
      >
        <div
          className="sc-cTAqQK frZLDz"
          color="#ea5548"
        />
        <div
          className="sc-jObWnj iqANhN"
        >
          <div
            className="sc-hUpaCq iQwGjh"
          >
            <div
              className="sc-khQegj"
            >
              00:10
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-gSQFLo emRrbX"
      >
        <button
          className="sc-dPiLbb epXfqL"
          onClick={[Function]}
        />
        <button
          className="sc-dPiLbb cekISx"
          onClick={[Function]}
        />
        <button
          className="sc-dPiLbb gOwvua"
          onClick={[Function]}
        />
      </div>
      <button
        className="sc-kDTinF XBrWv"
        onClick={[Function]}
      >
        TASK COMPLETED
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Title Default 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-bdvvtL dnQVSH"
  >
    <h1
      className="sc-gsDKAQ caCqSY"
    >
      TEST
    </h1>
    <hr />
  </div>
</div>
`;

exports[`Storyshots ToggleButton Default 1`] = `
<button
  className="sc-cidDSM sc-caiLqq iOsXAI dBfrGd"
  onClick={[Function]}
>
  ...
</button>
`;

exports[`Storyshots ToggleButton Primary 1`] = `
<div
  className="sc-pVTFL dZVpLl"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-cidDSM sc-jcFjpl iOsXAI gfEOsC"
    onClick={[Function]}
  >
    <img
      alt=""
      data-image="tomato"
      src="tomato_small_color.svg"
    />
    <img
      alt=""
      data-image="arrow"
      src="arrow.svg"
    />
  </button>
</div>
`;

exports[`Storyshots TomatoButton Active 1`] = `
<button
  className="sc-eCImPb gntwmx"
/>
`;

exports[`Storyshots TomatoButton Default 1`] = `
<button
  className="sc-eCImPb dSKkuN"
/>
`;

exports[`Storyshots TomatoButtonGroup Default 1`] = `
<div
  className="sc-jRQBWg tBfgG"
  onClick={[Function]}
>
  <button
    className="sc-eCImPb dSKkuN"
    data-number={1}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={2}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={3}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={4}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={5}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={6}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={7}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={8}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={9}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={10}
  />
</div>
`;

exports[`Storyshots TomatoButtonGroup Default Selected Number 1`] = `
<div
  className="sc-jRQBWg tBfgG"
  onClick={[Function]}
>
  <button
    className="sc-eCImPb gntwmx"
    data-number={1}
  />
  <button
    className="sc-eCImPb gntwmx"
    data-number={2}
  />
  <button
    className="sc-eCImPb gntwmx"
    data-number={3}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={4}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={5}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={6}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={7}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={8}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={9}
  />
  <button
    className="sc-eCImPb dSKkuN"
    data-number={10}
  />
</div>
`;
